@@ -214,6 +214,9 @@ Bug Fixes
 
 * SOLR-4097: Race can cause NPE in logging line on first cluster state update.
   (Mark Miller)
+  
+* SOLR-4099: Allow the collection api work queue to make forward progress even
+  when it's watcher is not fired for some reason. (Raintung Li via Mark Miller)
 
 Other Changes
 ----------------------
